kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-quarkus-service
spec:
  selector:
    app: inventory-quarkus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
